# robot_main_repo

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
install/kd1_bringup/share/kd1_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kd1_central_processing/lib/kd1_central_processing/: central_processing_node
install/kd1_central_processing/share/kd1_central_processing/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kd1_cpp_nodes/share/kd1_cpp_nodes/: local_setup.sh  (+5 more)
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: CustomNavigationGoal.msg  DetectedVoiceCommand.msg  IMUData.msg
src/kd1_bringup/: CMakeLists.txt
src/kd1_bringup/launch/: kd1.launch.py
src/kd1_central_processing/: package.xml  setup.cfg  setup.py
src/kd1_description/: CMakeLists.txt  package.xml
src/kd1_locomotion/: setup.cfg
src/kd1_locomotion/kd1_locomotion/: emergency_stop_node.py  moving_robot_node.py  teleop_node.py
src/kd1_navigation/: setup.cfg  setup.py
src/kd1_navigation/kd1_navigation/: navigation_node.py
src/kd1_sensors/: README.md  package.xml  setup.py  tuning.py
src/kd1_sensors/kd1_sensors/: audio_direction_node.py
src/kd1_utility_nodes/: package.xml  setup.py
src/kd1_utility_nodes/kd1_utility_nodes/: audio_playback_node.py  imu_conversion_node.py  light_ring_node.py
src/kd1_utility_nodes/scripts/: run_face_animation_node.sh
(+154 files in other folders)
